Add new item functionality complete

--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -41,7 +41,14 @@
                             <outlet property="delegate" destination="1Dd-MV-MRb" id="2se-Pw-cPI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="e86-RX-avk"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="e86-RX-avk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="RuA-oB-7qX">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addToDo:" destination="1Dd-MV-MRb" id="GVc-YL-ind"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fSH-C3-1H7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
